derniere modification, et passage en dossier propre, on croise les doigts pour que ça s'affiche correctement

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="./layout/sass/style.css">
+		<link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/css/style.css">
 	</head>
 	<body>
 		<div class="loadingspinnercontainer">
@@ -24,9 +24,11 @@
 			<!-- Section localisation-->
 			<section class="localisation">
 				<header class="localisation__icon">
-				<i class="fas fa-map-marker-alt"></i>
+					<i class="fas fa-map-marker-alt"></i>
 				</header>
-				<h6 class="localisation__text">Paris, Belleville</h6>
+				<h6 class="localisation__text">
+					Paris, Belleville
+				</h6>
 			</section>
 			<!-- Section explore-->
 			<section class="explore">
@@ -59,18 +61,16 @@
 				<h2 class="restaurants__headtitle">Restaurants</h2>
 				<div class="restaurants__cartecontainer">
 					<div class="restaurants__cartes carte1">
-						<a class="restaurants__carteslink" href="lapalettedugout.html">
+						<a class="restaurants__carteslink" href="/Users/chips/Desktop/AntoineChirat_3_15062021/views/lapalettedugout.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/Lapalettedugout.jpg" alt class="restaurants__carteimage"/>
+								<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/images/Lapalettedugout.jpg" alt class="restaurants__carteimage"/>
 								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
 								<div class="restaurants__info">
-								<h3 class="restaurants__title">La palette du goût</h3>
-								<span class="restaurants__quartier">
-									Ménilmontant
-								</span>
-								</div>	
+									<h3 class="restaurants__title">La palette du goût</h3>
+									<span class="restaurants__quartier">Ménilmontant</span>
+								</div>
 								<div class="restaurants__menufavorite">
 									<i class="far fa-heart emptyheart"></i>
 									<i class="fas fa-heart fullheart"></i>
@@ -79,9 +79,9 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte2">
-						<a class="restaurants__carteslink" href="lanotenenchantee.html">
+						<a class="restaurants__carteslink" href="/Users/chips/Desktop/AntoineChirat_3_15062021/views/lanotenenchantee.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/lanotenechantee.jpg" alt class="restaurants__carteimage"/>
+								<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/images/lanotenechantee.jpg" alt class="restaurants__carteimage"/>
 								<span class="restaurants__legend">Nouveau</span>
 							</header>
 							<footer>
@@ -97,9 +97,9 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte3">
-						<a class="restaurants__carteslink" href="alafrancaise.html">
+						<a class="restaurants__carteslink" href="/Users/chips/Desktop/AntoineChirat_3_15062021/views/alafrancaise.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/alafrancaise.jpg" alt class="restaurants__carteimage"/>
+								<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/images/alafrancaise.jpg" alt class="restaurants__carteimage"/>
 							</header>
 							<footer>
 								<h3 class="restaurants__title">À la française</h3>
@@ -114,9 +114,9 @@
 						</a>
 					</div>
 					<div class="restaurants__cartes carte4">
-						<a class="restaurants__carteslink" href="ledelicedessens.html">
+						<a class="restaurants__carteslink" href="/Users/chips/Desktop/AntoineChirat_3_15062021/views/ledelicedessens.html">
 							<header class="restaurants__carteheader">
-								<img src="layout/composants/images/ledelicedessens.jpg" alt class="restaurants__carteimage"/>
+								<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/publichtml/images/ledelicedessens.jpg" alt class="restaurants__carteimage"/>
 							</header>
 							<footer>
 								<h3 class="restaurants__title">Le délice des sens</h3>
@@ -138,25 +138,13 @@
 				<h3 class="footer__logo">Ohmyfood</h3>
 				<ul class="footer__link">
 					<li class="footer__list">
-						<a href="#">	
-							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
-						</a>
+						<a href="#"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</a>
 					</li>
 					<li class="footer__list ">
-						<a href="#">
-							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
-						</a>
+						<a href="#"><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</a>
 					</li>
-					<li class="footer__list">
-						<a href="#">
-							Mentions légales
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="mailto:ohmyfood@ohmyfood.com">
-							Contact
-						</a>
-					</li>
+					<li class="footer__list"><a href="#">Mentions légales</a></li>
+					<li class="footer__list"><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
 				</ul>
 			</div>
 		</footer>
